--- a/Spacial Delivery/game/.vscode/settings.json
+++ b/Spacial Delivery/game/.vscode/settings.json
@@ -113,6 +113,12 @@
                 }
             },
             {
+                "scope": "renpy.meta.color.#ccc",
+                "settings": {
+                    "foreground": "#ccc"
+                }
+            },
+            {
                 "scope": "renpy.meta.color.#fff",
                 "settings": {
                     "foreground": "#fff"
